fix current weather flex spacing

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -31,3 +31,7 @@ body {
 .transition-searching {
   transition: opacity 0.15s ease-out;
 }
+
+input[type=search].appearance-none {
+  appearance: none;
+}
